Fix image file name

--- a/people/data/phd_students.yml
+++ b/people/data/phd_students.yml
@@ -12,7 +12,7 @@
 
 
 - title: "Rayane Moustafa"
-  image: ../images/people/moustafa.png
+  image: ../images/people/moustafa.jpg
   # path:
   date_joined: 2023-09
   subtitle:
