--- a/_quarto.yml
+++ b/_quarto.yml
@@ -62,9 +62,12 @@ website:
 
 format:
   html:
+    respect-user-color-scheme: true
     theme:
-      light: cosmo
-      dark: solar
+      # the theme's light and dark scss files are adopted from 
+      # https://github.com/quarto-dev/quarto-web/ 
+      light: [cosmo, assets/stylesheets/theme.scss]
+      dark: [cosmo, assets/stylesheets/theme-dark.scss]
     css: assets/stylesheets/styles.css
     toc: true
     include-after-body:
