--- a/people/data/masters_students.yml
+++ b/people/data/masters_students.yml
@@ -1,4 +1,4 @@
 - title: "Yvonne Chen"
-  image: ../assets/images/profile-image-placeholder.png
+  image: ../assets/images/profile-image-placeholder.jpg
   # path: 
   # subtitle:
