Improve People page

--- a/people/data/pi.yml
+++ b/people/data/pi.yml
@@ -1,4 +1,4 @@
-- title: "Fred Feng"
-  subtitle: "Associate Professor"
+- title: Fred Feng
+  subtitle: Principal Investigator
   image: ../images/people/feng.jpg
   path: https://fenggroup.org/fredfeng/
