--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,7 +3,8 @@ project:
 
 website:
   title: "Feng Group"
-  description: "The research website for the Feng Group"
+  description: "The Feng Group website"
+  image: assets/images/open-graph-image.png
   favicon: assets/images/favicon.ico
   site-url: https://fenggroup.org
   back-to-top-navigation: true
