--- a/_quarto.yml
+++ b/_quarto.yml
@@ -47,7 +47,7 @@ website:
         target: _blank
         rel: noopener noreferrer
       - icon: youtube
-        href: https://www.youtube.com/@fenggroup
+        href: https://www.youtube.com/@fenggroup/videos
         text: YouTube
         target: _blank
         rel: noopener noreferrer
