--- a/people/data/masters.yml
+++ b/people/data/masters.yml
@@ -1,5 +1,5 @@
-- title: Yvonne Chen
-  subtitle: Master's students
-  date_joined: 2026-01
-  image: ../assets/images/profile-image-placeholder.jpg
-  # path: 
+# - title: 
+#   subtitle: Master's students
+#   date_joined: 
+#   image: ../assets/images/profile-image-placeholder.jpg
+#   path: 
